# IntroductionToFunctionalProgramming

./: HaskellPlayground.cabal  IntroductionToFunctionalProgramming.cabal  LearningHaskell.cabal  README.md  stack.yaml
PiH/: pih.cabal
PiH/src/: Calculator.hs  Chapter8.hs  Chapter9.hs  Compiler.hs  Countdown.hs  Exercises.hs  Life.hs
RWH/: LICENCE  Script.hs  rwh.cabal
RWH/app/: Main.hs
RWH/src/Ch16/: Csv.hs  HttpRequestParser.hs
RWH/src/Ch21/: PodDB.hs
RWH/src/Ch21/Internal/: PodSqlite.hs
RWH/src/Ch22/: PodDownload.hs  PodMain.hs  PodParser.hs  PodTypes.hs
RWH/src/Ch24/: BoundedChan.hs  LineChunks.hs  MVar.hs  SortMain.hs  Sorting.hs
RWH/src/Ch26/: BloomFilter.cabal  BloomFilter.hs  Hash.hs  Internal.hs  Mutable.hs  stack.yaml
RWH/src/Ch26/bench/: BloomFilter-bench-doubleHash.prof  BloomFilter-bench-init.prof  Hash.dump1.txt  Hash.dump2.txt  Hash.dump3.txt  Immutable.dump1.txt  Main.hs  README.md
RWH/src/Ch26/cbits/: lookup3.c
RWH/src/Ch26/docs/: BeingLazyWithConsciousness.md
RWH/src/Ch26/src/BloomFilter/: BloomFilter.hs  Hash.hs  Immutable.hs  Internal.hs  Mutable.hs  Utils.hs
RWH/src/Ch26/src/cbits/: lookup3.c  lookup3.h
RWH/src/Ch26/test/: Spec.hs
RWH/src/Ch27/: SyslogTCPClient.hs  SyslogTypes.hs  SyslogUDPClient.hs  SyslogUDPServer.hs
RWH/src/Ch28/: Check.hs  test_urls.txt
RWH/src/ch11/: Prettify2.hs
RWH/src/ch12/: Barcode.hs
RWH/src/ch13/: Num.hs  Passwdmap.hs
RWH/src/ch15/: HandleClass.hs  HandleIO.hs  Supply.hs  SupplyClass.hs
RWH/src/ch18/: MaybeT.hs  UglyStack.hs
RWH/src/ch19/: ParseInt.hs
RWH/src/ch8/: Glob.hs  GlobRegex.hs
RWH/src/ch9/: BetterPredicate.hs  ControlledVisit.hs  FoldDir.hs
RWH/test/Ch11/: Prettify2Spec.hs
RWH/test/Ch13/: NumSpec.hs
RWH/test/Ch16/: HttpRequestParserSpec.hs
RWH/tmp/: Foo.hs
app/: Main.hs
bench/: Main.hs
docs/: lazy-io-to-conduit.lhs
itfp/: itfp.cabal
itfp/app/: Main.hs
itfp/bench/: Main.hs
itfp/src/: Chapter3.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs
src/: AsyncLib.hs  AsyncPlayground.hs  Calculator.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs  CovarianceContravariance.hs  CovarianceContravariancePlayground.hs  ExceptionsPlayground.hs  Hangman.hs  ImplicitParams.hs  ImplicitParamsPlayground.hs  Lib.hs  MonadTransformers.hs  MonadTransformersPlayground.hs  Monads.hs  StreamingPlayground.hs  StrictnessPlayground.hs  TicTacToe.hs  Typeclasses.hs  TypeclassesPlayground.hs
src/pih/: Chapter8.hs  Chapter9.hs  Compiler.hs  Exercises.hs
src/rwh/: Chapter15.hs
src/rwh/Ch16/: Csv.hs  HttpRequestParser.hs
src/rwh/ch11/: Prettify2.hs
src/rwh/ch13/: Passwdmap.hs
src/rwh/ch15/: HandleClass.hs  SupplyClass.hs
src/rwh/ch18/: MaybeT.hs  UglyStack.hs
src/rwh/ch19/: ParseInt.hs
src/rwh/ch8/: Glob.hs  GlobRegex.hs
src/rwh/ch9/: BetterPredicate.hs  ControlledVisit.hs  FoldDir.hs
test/: Chapter4Spec.hs
test/RWH/Ch11/: Prettify2Spec.hs
test/RWH/Ch16/: HttpRequestParserSpec.hs
