name:                HaskellPlayground
version:             0.1.0.0
synopsis:            TBW
description:         Please see README.md
homepage:            https://github.com/futtetennista/IntroductionToFunctionalProgramming#readme
license:             MIT
license-file:        LICENSE
author:              Futtetenista
category:            Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MonadTransformersPlayground
                     , TypeclassesPlayground
                     , CovarianceContravariancePlayground
                     , ImplicitParamsPlayground
                     , AsyncPlayground
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1 && < 0.5.7.2
                     , random >= 1.1 && < 1.2
                     , mtl >= 2.2.1 && < 2.3.0
                     , text >= 1.2.2.1 && < 1.2.2.2
                     , bytestring >= 0.10.8.1 && < 0.10.8.2
                     , directory >= 1.3.0.0 && < 1.3.1.0
                     , filepath >= 1.4.1.1 && < 1.4.1.2
                     , regex-posix >= 0.95.2 && < 0.95.3
                     , unix >= 2.7.2.1 && < 2.7.2.2
                     , time >= 1.6.0.1 && < 1.6.0.2
                     , array >= 0.5.1.1 && < 0.5.1.2
                     , contravariant >= 1.4 && < 1.5
                     , parsec >= 3.1.11 && < 3.1.12
                     , network >= 2.6.3.1 && < 2.6.3.2
                     , async >= 2.1.1 && < 2.1.2
                     , stm >= 2.4.4.1 && < 2.4.4.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.4.3 && < 2.4.4
                     , QuickCheck >= 2.9.2 && < 2.9.3
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/futtetennista/IntroductionToFunctionalProgramming
