name:                IntroductionToFunctionalProgramming
version:             0.1.0.0
synopsis:            Solutions to the exercises in the book "Introduction to Functional Programming" by Bird and Wadler
description:         Please see README.md
homepage:            https://github.com/futtetennista/IntroductionToFunctionalProgramming#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          futtetennista@gmail.com
copyright:           2016 Futtetennista
category:            Exercises
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter2
                     , Chapter3
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable IntroductionToFunctionalProgramming-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  build-depends:       base
                     , IntroductionToFunctionalProgramming
  default-language:    Haskell2010

test-suite IntroductionToFunctionalProgramming-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , IntroductionToFunctionalProgramming
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/futtetennista/IntroductionToFunctionalProgramming
