name:                IntroductionToFunctionalProgramming
version:             0.1.0.0
synopsis:            Solutions to the exercises in the book "Introduction to Functional Programming" by Richard Bird and Philip Wadler
description:         Please see README.md
homepage:            https://github.com/futtetennista/IntroductionToFunctionalProgramming#readme
license:             MIT
license-file:        LICENSE
author:              Futtetenista
category:            Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter2
                     , Chapter3
                     , Chapter4
                     , Chapter5
                     , Chapter6
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable IntroductionToFunctionalProgramming-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  build-depends:       base
                     , IntroductionToFunctionalProgramming
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.2.4 && < 2.3.0
                     , IntroductionToFunctionalProgramming
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/futtetennista/IntroductionToFunctionalProgramming
