name:                IntroductionToFunctionalProgramming
version:             0.1.0.0
synopsis:            Originally this project contained only solutions to the exercises in the book "Introduction to Functional Programming" by Richard Bird and Philip Wadler. Over time I used it to solve exercises of other books and online resources.
description:         Please see README.md
homepage:            https://github.com/futtetennista/IntroductionToFunctionalProgramming#readme
license:             MIT
license-file:        LICENSE
author:              Futtetenista
category:            Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter2
                     , Chapter3
                     , Chapter4
                     , Chapter5
                     , Chapter6
                     , Chapter7
                     , Hangman
                     , Chapter8
                     , Chapter9
                     , Countdown
                     , Life
                     , Pih.Exercises
                     , TicTacToe
                     , Calculator
                     , MonadTransformers
                     , Typeclasses
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1 && < 0.5.7.2
                     , random >= 1.1 && < 1.2
                     , mtl >= 2.2.1 && < 2.3.0
                     , text >= 1.2.2.1 && < 1.2.2.2
  default-language:    Haskell2010

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  build-depends:       base
                     , IntroductionToFunctionalProgramming
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , IntroductionToFunctionalProgramming
                     , hspec >= 2.4.3 && < 2.4.4
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  default-language:    Haskell2010

test-suite space-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , IntroductionToFunctionalProgramming
                     , weigh >= 0.0.3 && < 0.0.4
  ghc-options:         -Wall
                       -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/futtetennista/IntroductionToFunctionalProgramming
