name:                pih
version:             0.1.0.0
synopsis:            Solutions to the exercises in the book "Programming in Haskell" by Graham Hutton.
description:         Please see README.md
homepage:            https://github.com/futtetennista/IntroductionToFunctionalProgramming#readme
license:             MIT
author:              Futtetenista
category:            Learning
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hangman
                     , Countdown
                     , Life
                     , Exercises
                     , Chapter8
                     , Chapter9
                     , TicTacToe
                     , Calculator
                     , Compiler
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1 && < 0.5.7.2
                     , random >= 1.1 && < 1.2
                     , mtl >= 2.2.1 && < 2.3.0
                     , text >= 1.2.2.1 && < 1.2.2.2
                     , bytestring >= 0.10.8.1 && < 0.10.8.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pih
                     , hspec >= 2.4.3 && < 2.4.4
                     , QuickCheck >= 2.9.2 && < 2.9.3
                     , parsec
                     , mtl
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/futtetennista/IntroductionToFunctionalProgramming
