name:                rwh
version:             0.1.0.0
synopsis:            Adapted code and exercises from http://book.realworldhaskell.org/
description:         Please see README.md
homepage:            https://github.com/futtetennista/IntroductionToFunctionalProgramming#readme
licence-file:        LICENCE
author:              Futtetenista
category:            Learning
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ch8.GlobRegex
                     , Ch8.Glob
                     , Ch9.ControlledVisit
                     , Ch9.FoldDir
                     , Ch9.BetterPredicate
                     , Ch11.Prettify2
                     , Ch13.Passwdmap
                     , Ch13.Num
                     , Ch15.Supply
                     , Ch15.SupplyClass
                     , Ch15.HandleIO
                     , Ch15.HandleClass
                     , Ch16.Csv
                     , Ch16.HttpRequestParser
                     , Ch18.UglyStack
                     , Ch19.ParseInt
                     , Ch21.PodDB
                     , Ch21.Internal.PodSqlite
                     , Ch22.PodDownload
                     , Ch22.PodParser
                     , Ch22.PodMain
                     , Ch24.BoundedChan
                     , Ch24.MVar
                     , Ch24.Sorting
                     , Ch24.SortMain
                     , Ch27.SyslogTypes
                     , Ch27.SyslogUDPClient
                     , Ch27.SyslogUDPServer
                     , Ch27.SyslogTCPServer
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1 && < 0.5.7.2
                     , random >= 1.1 && < 1.2
                     , mtl >= 2.2.1 && < 2.3.0
                     , text >= 1.2.2.1 && < 1.2.2.2
                     , bytestring >= 0.10.8.1 && < 0.10.8.2
                     , directory >= 1.3.0.0 && < 1.3.1.0
                     , filepath >= 1.4.1.1 && < 1.4.1.2
                     , regex-posix >= 0.95.2 && < 0.95.3
                     , unix >= 2.7.2.1 && < 2.7.2.2
                     , time >= 1.6.0.1 && < 1.6.0.2
                     , array >= 0.5.1.1 && < 0.5.1.2
                     , parsec >= 3.1.11 && < 3.1.12
                     , network >= 2.6.3.1 && < 2.6.3.2
                     , async >=2.1.1 && < 2.1.2
                     , HaXml >= 1.25.3 && < 1.25.4
                     , persistent >= 2.6.1 && < 2.6.2
                     , persistent-sqlite >= 2.6.2 && < 2.6.3
                     , persistent-template >= 2.5.2 && < 2.5.3
                     , http-client >= 0.5.6.1 && < 0.5.6.2
                     , http-types >= 0.9.1 && < 0.9.2
                     , http-client-tls >= 0.3.4 && < 0.3.5
                     , parallel >= 3.2.1.0 && <  3.2.1.1
                     , deepseq >= 1.4.2.0 && < 1.4.2.1
                     , stm
                     , network-uri
                     , optparse-applicative
                     , conduit-combinators
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable rwh-main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  build-depends:       base
                     , rwh
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite rwh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsec
                     , mtl
                     , rwh
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , random
                     , bytestring
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/futtetennista/IntroductionToFunctionalProgramming
