name:                itfp
version:             0.1.0.0
synopsis:            Solutions to the exercises in the book "Introduction to Functional Programming" by Richard Bird and Philip Wadler.
description:         Please see README.md
homepage:            https://github.com/futtetennista/IntroductionToFunctionalProgramming#readme
license:             MIT
author:              Futtetenista
category:            Learning
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter2
                     , Chapter3
                     , Chapter4
                     , Chapter5
                     , Chapter6
                     , Chapter7
                     , Chapter8
                     , Chapter9
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1 && < 0.5.7.2
                     , mtl >= 2.2.1 && < 2.3.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable itfp-main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  build-depends:       base
                     , itfp
  default-language:    Haskell2010

test-suite itfp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , itfp
                     , hspec >= 2.4.3 && < 2.4.4
                     , QuickCheck >= 2.9.2 && < 2.9.3
                     , parsec
                     , mtl
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  default-language:    Haskell2010

test-suite iftp-space-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , itfp
                     , weigh >= 0.0.3 && < 0.0.4
  ghc-options:         -O2
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/futtetennista/IntroductionToFunctionalProgramming
