name:                BloomFilter
version:             0.1.0.0
synopsis:            Adapted code and exercises from http://book.realworldhaskell.org/
description:         Please see README.md
homepage:            https://github.com/futtetennista/IntroductionToFunctionalProgramming#readme
author:              Futtetenista
category:            Learning
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BloomFilter.Utils
                     , BloomFilter.Immutable
                     , BloomFilter.Hash
                     , BloomFilter.Mutable
                     , BloomFilter.Internal
  build-depends:       base
                     , bytestring
                     , array
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-prof-options:    -auto-all
  c-sources:           src/cbits/lookup3.c
  cc-options:          -O3
  include-dirs:        src/cbits
  includes:            lookup3.h
  install-includes:    lookup3.h

-- executable rwh-main
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N
--                        -Wall
--                        -Wincomplete-uni-patterns
--                        -Wincomplete-record-updates
--   build-depends:       BloomFilter
--                      , base

--   default-language:    Haskell2010
--   default-extensions:  OverloadedStrings

test-suite BloomFilter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       BloomFilter
                     , base
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , bytestring
                     , array
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/futtetennista/IntroductionToFunctionalProgramming
